// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ProposalRow /> should render proposal displayed 1`] = `
<Collapse
  dimension="height"
  getDimensionValue={[Function]}
  id="collapse-proposal-proposal1"
  in={true}
  mountOnEnter={false}
  timeout={300}
  transitionAppear={false}
  unmountOnExit={false}
>
  <div>
    <ListGroupItem
      bsClass="list-group-item"
      id="item-proposal-proposal1"
      listItem={false}
    >
      <div
        className="ml-25"
      >
        <h4>
          <a
            className="profile__proposal__open__link"
            href="http://perdu.com"
            id="item-proposal-link-proposal1"
            title="perdu sur internet ?"
          >
            perdu sur internet ?
          </a>
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            className="profile__proposal__unfollow__button"
            disabled={false}
            id="profile-proposal-unfollow-button-proposal1"
            onClick={[Function]}
            style={
              Object {
                "float": "right",
              }
            }
          >
            <FormattedMessage
              id="unfollow"
              values={Object {}}
            />
          </Button>
        </h4>
      </div>
    </ListGroupItem>
  </div>
</Collapse>
`;

exports[`<ProposalRow /> should render proposal hidden 1`] = `
<Collapse
  dimension="height"
  getDimensionValue={[Function]}
  id="collapse-proposal-proposal1"
  in={false}
  mountOnEnter={false}
  timeout={300}
  transitionAppear={false}
  unmountOnExit={false}
>
  <div>
    <ListGroupItem
      bsClass="list-group-item"
      id="item-proposal-proposal1"
      listItem={false}
    >
      <div
        className="ml-25"
      >
        <h4>
          <a
            className="profile__proposal__open__link"
            href="http://perdu.com"
            id="item-proposal-link-proposal1"
            title="perdu sur internet ?"
          >
            perdu sur internet ?
          </a>
          <Button
            active={false}
            block={false}
            bsClass="btn"
            bsStyle="default"
            className="profile__proposal__unfollow__button"
            disabled={false}
            id="profile-proposal-unfollow-button-proposal1"
            onClick={[Function]}
            style={
              Object {
                "float": "right",
              }
            }
          >
            <FormattedMessage
              id="unfollow"
              values={Object {}}
            />
          </Button>
        </h4>
      </div>
    </ListGroupItem>
  </div>
</Collapse>
`;
